Finalizando micro de Relatorios